# FlashOS

./: .env  .gitattributes  .gitignore  .zsh_project  CHANGELOG.md  Cargo.toml  DOCUMENTATION.md  LICENSE.md  MIGRATION.md  NOTICE  PORT.md  README.md  REFERENCE.md  SETUP.md  VERSIONING.md  build.sh  build.zig  build.zig.zon  config.txt  deny.toml  flashos.env.zsh  flashos.zsh  rust-toolchain.toml  screenlog.0  versions.env
components/flashshell/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml
components/flashshell/crates/flashshell-cli/: Cargo.toml
components/flashshell/crates/flashshell-cli/src/: cli.rs  completion.rs  config.rs  editor.rs  highlight.rs  hint.rs  history.rs  interactive.rs  lib.rs  main.rs  reedline_editor.rs
components/flashshell/crates/flashshell-cli/tests/: config_policy.rs  config_startup.rs  context_aware_completion.rs  dependency_direction.rs  e2e.rs  editor_adapter.rs  history_hints.rs  history_policy.rs  interactive_session.rs  pty.rs  syntax_highlighting.rs
components/flashshell/crates/flashshell-platform/: Cargo.toml
components/flashshell/crates/flashshell-platform-posix/: Cargo.toml
components/flashshell/crates/flashshell-platform-posix/src/: lib.rs
components/flashshell/crates/flashshell-platform-posix/tests/: posix.rs
components/flashshell/crates/flashshell-platform/src/: lib.rs
components/flashshell/crates/flashshell-platform/tests/: platform.rs
components/flashshell/crates/flashshell-runtime/: Cargo.toml
components/flashshell/crates/flashshell-runtime/src/: builtin.rs  command.rs  convert.rs  environment.rs  eval.rs  execute.rs  lib.rs  operation.rs  plan.rs  resolve.rs  scope.rs  script.rs  session.rs  stream.rs  structured.rs  value.rs
components/flashshell/crates/flashshell-runtime/tests/: boolean_logic.rs  builtins.rs  cancellation.rs  convert.rs  drain.rs  environment.rs  evaluation.rs  expansion.rs  foreground.rs  functions.rs  limits.rs  match_statement.rs  operations.rs  pipeline.rs  plan.rs  preflight.rs  registry.rs  resolution.rs  runtime_errors.rs  scopes.rs  session.rs  spread.rs  status_execution.rs  stream.rs  structured.rs  values.rs
components/flashshell/crates/flashshell-syntax/: Cargo.toml
components/flashshell/crates/flashshell-syntax/src/: ast.rs  classification.rs  diagnostic.rs  formatter.rs  lexer.rs  lib.rs  parser.rs  source.rs
components/flashshell/crates/flashshell-syntax/tests/: ast_construction.rs  formatter.rs  golden_snapshots.rs  grammar_golden.rs  input_classification.rs  lexical_golden.rs  lossless_lexer.rs  parser.rs  property_invariants.rs  source_diagnostics.rs
components/flashshell/fuzz/: Cargo.toml  README.md  run-smoke.sh
components/flashshell/fuzz/fuzz_targets/: lexer.rs  parser.rs
components/flashshell/tests/e2e/: README.md
components/flashshell/tests/fixtures/: README.md  status.rs  stream.rs
components/flashshell/tests/golden/ast/: background.ast  bindings.ast  calls-and-grouping.ast  closures.ast  commands.ast  conditional-chains.ast  control-flow.ast  control-transfer.ast  environment.ast  functions.ast  literals-and-collections.ast  manifest.tsv  operators.ast  pipelines.ast  redirections.ast  script-separators.ast  substitution.ast
components/flashshell/tests/golden/diagnostics/: grammar-chained-comparison.txt  grammar-declaration-background.txt  grammar-grouped-background.txt  grammar-leading-pipe.txt  grammar-stray-else.txt  lexical-empty-unicode-escape.txt  lexical-out-of-range-unicode-escape.txt  lexical-surrogate-unicode-escape.txt  lexical-unknown-double-escape.txt  (+1 more)
crates/canary/: Cargo.toml
crates/canary/src/: lib.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: block_dev.rs  console.rs  elf.rs  execve.rs  fat32.rs  fat32_backend.rs  fdtable.rs  file.rs  fork.rs  hwrng.rs  initramfs_backend.rs  klog_ring.rs  kmain.rs  lib.rs  mailbox.rs  mm_user.rs  overlay.rs  path.rs  perm.rs  pipe.rs  rpi4b_emmc2.rs  rpi4b_gpio.rs  rpi4b_irq.rs  rpi4b_mailbox.rs  rpi4b_power.rs  rpi4b_usb.rs  sched.rs  sha256.rs  shadow.rs  sys.rs  usb_descriptors.rs  utilc.rs  vfs.rs  wait_queue.rs
crates/kernel/src/diagnostics/: generic_timer.rs  mod.rs
crates/kernel/src/drivers/: mod.rs
crates/kernel/src/fs/: fat32.rs  fat32_backend.rs  fdtable.rs  file.rs  initramfs.rs  mod.rs  overlay.rs  pipe.rs
crates/kernel/src/mm/: mod.rs  page_alloc.rs  user.rs
crates/kernel/src/process/: elf.rs  execve.rs  fork.rs  mod.rs  sched.rs  wait_queue.rs
crates/kernel/src/security/: mod.rs  sha256.rs
crates/kernel/src/syscall/: mod.rs  sys.rs
crates/kernel/src/trace/: mod.rs  pl011_uart.rs  sampler.rs  trace_main.rs  utils.rs
crates/kernel/src/util/: mod.rs  utilc.rs
crates/klib/: Cargo.toml
crates/klib/src/: ffi.rs  lib.rs
user/argv-echo/: Cargo.toml
user/argv-echo/src/: lib.rs
user/dmesg/: Cargo.toml
user/dmesg/src/: lib.rs
user/edit/: Cargo.toml
user/edit/src/: lib.rs
user/forkbomb/: Cargo.toml
user/forkbomb/src/: lib.rs
user/fsh/: Cargo.toml  build.rs
user/fsh/src/: lib.rs
user/grep/: Cargo.toml
user/grep/src/: lib.rs  matcher.rs
user/less/: Cargo.toml
user/less/src/: lib.rs
user/ls/: Cargo.toml
user/ls/src/: lib.rs
user/meminfo/: Cargo.toml
user/meminfo/src/: lib.rs
user/mv/: Cargo.toml
user/mv/src/: lib.rs
user/passwd/: Cargo.toml
user/passwd/src/: lib.rs
user/pid1/: Cargo.toml
user/pid1/src/: harness.rs  lib.rs
user/rm/: Cargo.toml
user/rm/src/: lib.rs
user/stackbomb/: Cargo.toml
user/stackbomb/src/: lib.rs
user/sysinfo/: Cargo.toml
user/sysinfo/src/: lib.rs
user/uptime/: Cargo.toml
user/uptime/src/: lib.rs
userland/auth/login/: Cargo.toml
userland/auth/login/src/: lib.rs
userland/auth/passwd/: Cargo.toml
userland/coreutils/cat/: Cargo.toml
userland/coreutils/clear/: Cargo.toml
userland/coreutils/ls/: Cargo.toml
userland/fixtures/forkbomb/: Cargo.toml
userland/fixtures/stackbomb/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: asm_defs.rs  build.rs  census.rs  check_layout.rs  guard.rs  initramfs.rs  main.rs  qemu.rs  shadow.rs  syms.rs  toolchain.rs  ui_defs.rs
(+489 files in other folders)
