[workspace]
resolver = "2"
members = [
    "xtask",
    "crates/abi",
    "crates/canary",
    "crates/console-ui",
    "crates/flibc",
    "crates/kernel",
    "crates/klib",
    "crates/pwfile",
    "crates/user-rt",
    "user/argv-echo",
    "user/cat",
    "user/clear",
    "user/cp",
    "user/cpuinfo",
    "user/dmesg",
    "user/echo",
    "user/edit",
    "user/flibc-demo",
    "user/forkbomb",
    "user/fsh",
    "user/grep",
    "user/hello",
    "user/less",
    "user/login",
    "user/ls",
    "user/meminfo",
    "user/mv",
    "user/passwd",
    "user/pid1",
    "user/rm",
    "user/stackbomb",
    "user/sysinfo",
    "user/uptime",
]

[workspace.package]
# Synchronized from versions.env by scripts/sync_versions.sh.
version = "0.8.0"
edition = "2021"
rust-version = "1.97"
license = "Apache-2.0"

# Bare-metal profile shared by every target-side crate. panic=abort and
# overflow-checks=off keep the panic path free of core::fmt: the handler emits a
# fixed marker, so the formatting engine never links and the 128 KiB symbol
# budget stays intact.
[profile.release.package.flashos-pid1]
opt-level = "z"

[profile.release]
opt-level = 2
lto = true
debug = true
panic = "abort"
overflow-checks = false
codegen-units = 1

[profile.dev]
panic = "abort"
