[workspace]
resolver = "2"
members = [
    "xtask",
    "crates/kernel-abi",
    "crates/canary",
    "crates/flashsdk-abi",
    "crates/flashsdk-base",
    "crates/flashsdk-rt",
    "crates/console-ui",
    "crates/flibc",
    "crates/kernel",
    "crates/klib",
    "crates/pwfile",
    "user/argv-echo",
    "user/cat",
    "user/clear",
    "user/cp",
    "user/cpuinfo",
    "user/dmesg",
    "user/echo",
    "user/edit",
    "user/flibc-demo",
    "user/forkbomb",
    "user/fsh",
    "user/grep",
    "user/hello",
    "user/less",
    "user/login",
    "user/ls",
    "user/meminfo",
    "user/mv",
    "user/passwd",
    "user/pid1",
    "user/rm",
    "user/stackbomb",
    "user/sysinfo",
    "user/uptime",
]

# FlashShell is a component consumer with its own toolchain surface (edition 2024,
# resolver 3, unwinding tests, cargo-fuzz) that would clash with this bare-metal
# workspace's load-bearing release profile. It lives in-repo as a self-contained
# nested workspace; a future EL0 platform adapter is what bridges it to the SDK.
exclude = ["components/flashshell"]

[workspace.package]
# Synchronized from versions.env by scripts/sync_versions.sh.
version = "0.8.0"
edition = "2021"
rust-version = "1.97"
license = "Apache-2.0"

# FlashSDK: the public userspace foundation. The kernel, flibc, xtask, and every
# user program consume these crates instead of local copies of the syscall ABI,
# EL0 runtime, and base library. They live in-tree as workspace members, so the
# ABI seam is enforced by crate visibility rather than a cross-repo revision pin.
[workspace.dependencies]
flashsdk-abi = { path = "crates/flashsdk-abi" }
flashsdk-rt = { path = "crates/flashsdk-rt" }
flashsdk-base = { path = "crates/flashsdk-base" }

# Bare-metal profile shared by every target-side crate. panic=abort and
# overflow-checks=off keep the panic path free of core::fmt: the handler emits a
# fixed marker, so the formatting engine never links and the 128 KiB symbol
# budget stays intact.
[profile.release.package.flashos-pid1]
opt-level = "z"

[profile.release]
opt-level = 2
lto = true
debug = true
panic = "abort"
overflow-checks = false
codegen-units = 1

[profile.dev]
panic = "abort"
