[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

# No third-party dependencies by design: the host build orchestrator is part of
# the clean-room surface, so its supply chain stays empty.
[dependencies]
