[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

# No third-party dependencies by design: the host build orchestrator is part of
# the clean-room surface, so its supply chain stays empty. The one dependency is
# in-tree: `asm-defs` derives the assembly-visible layout facts from the ABI
# crate itself, so the numbers it checks cannot be a stale copy.
[dependencies]
flashos-abi = { path = "../crates/abi" }
flashos-console-ui = { path = "../crates/console-ui" }
# `gen-shadow` runs the kernel's own PBKDF2 to bake /etc/shadow, so the verifier
# in the image is produced by the exact code that later checks it at login.
flashos-kernel = { path = "../crates/kernel" }
