[package]
name = "flashos-kernel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "flashos_kernel"

[features]
verbose-fork = []

[dependencies]
flashos-abi = { path = "../abi" }
# Workspace-internal no_std crates, not third-party runtime: the syscall layer
# needs the frozen boot-marker bytes and the account-file lookup.
flashos-console-ui = { path = "../console-ui" }
flashos-pwfile = { path = "../pwfile" }

# Host-test oracles ONLY. Dev-dependencies never reach the kernel image, so it
# keeps its no-third-party-runtime posture; the symbol gate proves no RustCrypto
# symbol lands in the archive. They stand in for the std.crypto differentials the
# Flash module carried, one for one.
[dev-dependencies]
sha2 = "=0.10.9"
hmac = "=0.12.1"
pbkdf2 = { version = "=0.12.2", default-features = false, features = ["hmac"] }
