[package]
name = "flashos-kernel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "flashos_kernel"

[features]
verbose-fork = []
# Compiles the statistical sampler into the IRQ path. Mirrors the build's
# `cargo xtask build --trace` flag; without it the hook costs nothing.
trace = []
# Compiles the boot-as-test path into the kernel root: the pre-PID-1 EMMC2 block
# smoke and the free-page baseline emit. Mirrors the build's --boot-selftest, so
# a clean boot carries neither. A feature, not an environment read, because it is
# part of cargo's fingerprint -- flipping it rebuilds the archive instead of
# leaving a stale one that boots without the checks it claims to run.
boot-selftest = []

[dependencies]
flashos-abi = { path = "../abi" }
flashsdk-abi = { workspace = true }
# Workspace-internal no_std crates, not third-party runtime: the syscall layer
# needs the frozen boot-marker bytes and the account-file lookup.
flashos-console-ui = { path = "../console-ui" }
flashos-pwfile = { path = "../pwfile" }

# Host-test oracles ONLY. Dev-dependencies never reach the kernel image, so it
# keeps its no-third-party-runtime posture; the symbol gate proves no RustCrypto
# symbol lands in the archive. They stand in for the std.crypto differentials the
# Flash module carried, one for one.
[dev-dependencies]
sha2 = "=0.10.9"
hmac = "=0.12.1"
pbkdf2 = { version = "=0.13.0", default-features = false, features = ["hmac"] }
