[package]
name = "flashos-klib"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "flashos_klib"
# The archive linked into kernel8.elf. Kept separate from `flashos-kernel` (a
# plain rlib) because a staticlib
# must carry a panic handler and cannot be built for the host, which would put
# the kernel's logic out of reach of the host test suite. This crate holds no
# logic — only the C-ABI seam and the panic path — so nothing testable is lost.
crate-type = ["staticlib"]

[dependencies]
flashos-abi = { path = "../abi" }
flashsdk-abi = { workspace = true }
flashos-kernel = { path = "../kernel" }

[features]
verbose-fork = ["flashos-kernel/verbose-fork"]
trace = ["flashos-kernel/trace"]
boot-selftest = ["flashos-kernel/boot-selftest"]
