[package]
name = "flashos-argv-echo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "flashos_argv_echo"
crate-type = ["staticlib"]

[dependencies]
flashos-flibc = { path = "../../crates/flibc" }
flashsdk-rt = { workspace = true }
