[package]
name = "flashos-fsh"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "flashos_fsh"
crate-type = ["staticlib"]

[dependencies]
flashos-abi = { path = "../../crates/abi" }
flashos-console-ui = { path = "../../crates/console-ui" }
flashos-flibc = { path = "../../crates/flibc" }
flashos-pwfile = { path = "../../crates/pwfile" }
flashos-user-rt = { path = "../../crates/user-rt" }
