[package]
name = "flashos-grep"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# A library for now: the matcher ports ahead of the tool that drives it, so there
# is no `_start` to link yet. It becomes a staticlib payload when the tool body
# lands and joins the EL0 payload table in xtask.
[lib]
name = "flashos_grep"

[dependencies]
flashos-flibc = { path = "../../crates/flibc" }
