[package]
name = "flashos-grep"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# staticlib only. Adding `rlib` alongside it makes the archive carry core's
# formatting objects into the payload link (321 core::fmt symbols, ~170 KiB of text),
# which the artefact gate rejects. The matcher's host tests do not need it: cargo
# compiles its own test target from the same source.
[lib]
name = "flashos_grep"
crate-type = ["staticlib"]

[dependencies]
flashsdk-abi = { workspace = true }
flashos-flibc = { path = "../../crates/flibc" }
flashsdk-rt = { workspace = true }
