[package]
name = "flashos-less"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "flashos_less"
crate-type = ["staticlib"]

[dependencies]
flashsdk-abi = { workspace = true }
flashos-flibc = { path = "../../crates/flibc" }
flashsdk-rt = { workspace = true }
