[package]
name = "flashos-ls"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "flashos_ls"
crate-type = ["staticlib"]

[dependencies]
flashos-abi = { path = "../../crates/abi" }
flashos-flibc = { path = "../../crates/flibc" }
flashos-user-rt = { path = "../../crates/user-rt" }
