[package]
name = "flashos-passwd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "flashos_passwd"
crate-type = ["staticlib"]

[dependencies]
flashos-abi = { path = "../../crates/abi" }
flashos-flibc = { path = "../../crates/flibc" }
flashos-pwfile = { path = "../../crates/pwfile" }
flashos-user-rt = { path = "../../crates/user-rt" }
