[package]
name = "flashshell-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
flashshell-syntax = { path = "../crates/flashshell-syntax" }
libfuzzer-sys = "0.4"

[[bin]]
name = "lexer"
path = "fuzz_targets/lexer.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parser"
path = "fuzz_targets/parser.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
