[package]
name = "flashos-login"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "flashos_login"
crate-type = ["staticlib"]

[dependencies]
flashos-flibc = { path = "../../../crates/flibc" }
flashos-pwfile = { path = "../../../crates/pwfile" }
flashsdk-rt = { workspace = true }
