[package]
name = "flashos-passwd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "flashos_passwd"
crate-type = ["staticlib"]

[dependencies]
flashsdk-abi = { workspace = true }
flashos-flibc = { path = "../../../crates/flibc" }
flashos-pwfile = { path = "../../../crates/pwfile" }
flashsdk-rt = { workspace = true }
