[package]
name = "flashos-clear"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "flashos_clear"
crate-type = ["staticlib"]

[dependencies]
flashos-console-ui = { path = "../../../crates/console-ui" }
flashos-flibc = { path = "../../../crates/flibc" }
flashsdk-rt = { workspace = true }
